--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            height: 100vh;
+            height: 100dvh;
             background-color: #f0f0f0;
         }
         img {
@@ -20,46 +20,64 @@
             border-radius: 10px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
         }
+
     </style>
 </head>
 <body>
     <img src="" alt="Girls kissing" class="animate__animated animate__fadeIn">
     <script>
-        // Use cors-anywhere proxy for testing
+        // Use cors-anywhere proxy for testing (users must request access at cors-anywhere.herokuapp.com)
         const proxyUrl = 'https://cors-anywhere.herokuapp.com/';
-        const apiUrl = 'https://safebooru.org/index.php?page=dapi&s=post&q=index&tags=yuri+kiss+2girls&json=1&limit=100';
-        const fullUrl = proxyUrl + apiUrl;
-
+        const baseApiUrl = 'https://safebooru.org/index.php?page=dapi&s=post&q=index&tags=yuri+kiss+2girls&json=1&limit=100';
         let posts = [];
 
-        fetch(fullUrl)
-            .then(response => {
-                if (!response.ok) {
-                    throw new Error('Network response was not ok');
-                }
-                return response.json();
-            })
-            .then(data => {
-                posts = data;
-                if (posts && posts.length > 0) {
+        // Fetch 300 images across 3 pages (100 images per page)
+        async function fetchImages() {
+            try {
+                const pages = [0, 1, 2]; // Fetch pages 0, 1, 2 for up to 300 images
+                const fetchPromises = pages.map(page => 
+                    fetch(`${proxyUrl}${baseApiUrl}&pid=${page}`)
+                        .then(response => {
+                            if (!response.ok) {
+                                throw new Error(`Network response was not ok for page ${page}`);
+                            }
+                            return response.json();
+                        })
+                );
+
+                const results = await Promise.all(fetchPromises);
+                // Combine all posts into a single array
+                posts = results.flat().filter(post => post.directory && post.image); // Ensure valid posts
+                if (posts.length > 0) {
                     const randomIndex = Math.floor(Math.random() * posts.length);
                     const imageUrl = `https://safebooru.org/images/${posts[randomIndex].directory}/${posts[randomIndex].image}`;
                     document.querySelector("img").src = imageUrl;
                 } else {
-                    console.error("No posts found.");
+                    console.error("No valid posts found.");
                     document.querySelector("img").alt = "No images available";
                 }
-            })
-            .catch(error => {
+            } catch (error) {
                 console.error("Error fetching data:", error);
                 document.querySelector("img").alt = "Failed to load image";
-            });
-
-        function changeImage(){
-            const randomIndex = Math.floor(Math.random() * posts.length);
-            const imageUrl = `https://safebooru.org/images/${posts[randomIndex].directory}/${posts[randomIndex].image}`;
-            document.querySelector("img").src = imageUrl;
+            }
         }
+
+        function changeImage() {
+            if (posts.length > 0) {
+                const randomIndex = Math.floor(Math.random() * posts.length);
+                const imageUrl = `https://safebooru.org/images/${posts[randomIndex].directory}/${posts[randomIndex].image}`;
+                document.querySelector("img").src = imageUrl;
+            } else {
+                console.error("No posts available to display.");
+                document.querySelector("img").alt = "No images available";
+            }
+        }
+
+        // Fetch images on page load
+        fetchImages();
+
+        // Change image every 10 seconds
+        setInterval(changeImage, 20 * 1000);
     </script>
 </body>
 </html>
