--- a/index.html
+++ b/index.html
@@ -7,28 +7,64 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
     <title>Yuri Kissing Images</title>
     <style>
+        @import url('https://fonts.googleapis.com/css2?family=Changa+One:ital@0;1&display=swap');
         body {
             display: flex;
             justify-content: center;
             align-items: center;
             height: 100dvh;
             background-color: #f0f0f0;
+            font-family: 'Changa One';
         }
-        img {
+        #program {
             max-width: 90%;
             max-height: 90%;
             border-radius: 10px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
         }
-
+        img {
+            width: 100%;
+            height: auto;
+            border-radius: 10px;
+        }
+        form {
+            display: flex;
+            flex-direction: column;
+            gap: 5px;
+            width: 40%;
+        }
+        input, button {
+            padding: 10px;
+            font-size: 1em;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+            font-family: 'Changa One';
+        }
+        button {
+            background-color: #4CAF50;
+            color: white;
+            cursor: pointer;
+        }
+        button:hover {
+            background-color: #45a049;
+        }
     </style>
 </head>
 <body>
-    <img src="" alt="Girls kissing" class="animate__animated animate__fadeIn">
+    <form action="" id="setup">
+        <label for="tags">Tags</label>
+        <input type="text" name="tags">
+        <label for="interval">Change Interval (seconds)</label>
+        <input type="number" name="interval" value="10" min="1">
+        <button type="button" onclick="start()">Start</button>
+    </form>
+    <div style="display: none;" id="program">
+        <img src="" alt="Girls kissing" class="animate__animated animate__fadeIn">
+    </div>
     <script>
         // Use cors-anywhere proxy for testing (users must request access at cors-anywhere.herokuapp.com)
         const proxyUrl = 'https://cors-anywhere.herokuapp.com/';
-        const baseApiUrl = 'https://safebooru.org/index.php?page=dapi&s=post&q=index&tags=yuri+kiss+2girls&json=1&limit=100';
+        let baseApiUrl = 'https://safebooru.org/index.php?page=dapi&s=post&q=index&tags=yuri+kiss+2girls&json=1&limit=100';
         let posts = [];
 
         // Fetch 300 images across 3 pages (100 images per page)
@@ -73,11 +109,26 @@
             }
         }
 
-        // Fetch images on page load
-        fetchImages();
 
-        // Change image every 10 seconds
-        setInterval(changeImage, 20 * 1000);
+        function start(){
+            const form = document.getElementById('setup');
+            const program = document.getElementById('program');
+            const tags = form.elements['tags'].value;
+            const interval = parseInt(form.elements['interval'].value, 10) * 1000;
+            if (tags.trim() !== '') {
+                // Update the baseApiUrl with user-provided tags
+                baseApiUrl = `https://safebooru.org/index.php?page=dapi&s=post&q=index&tags=yuri+kiss+2girls+${encodeURIComponent(tags.split(' ').join('+'))}&json=1&limit=100`;
+            }
+
+            form.style.display = 'none';
+            program.style.display = 'block';
+
+            // Fetch images on page load
+            fetchImages();
+    
+            // Change image every 10 seconds
+            setInterval(changeImage, interval);
+        }
     </script>
 </body>
 </html>
