--- a/index.html
+++ b/index.html
@@ -15,16 +15,18 @@
             height: 100dvh;
             background-color: #f0f0f0;
             font-family: 'Changa One';
+            padding: 30px;
+            box-sizing: border-box;
         }
         #program {
+            display: flex;
             max-width: 90%;
-            max-height: 90%;
+            height: 100%;
             border-radius: 10px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
         }
         img {
-            width: 100%;
-            height: auto;
+            height: 100%;
             border-radius: 10px;
         }
         form {
