--- a/index.html
+++ b/index.html
@@ -86,9 +86,9 @@
                 const results = await Promise.all(fetchPromises);
                 // Combine all posts into a single array
                 posts = results.flat().filter(post => post.directory && post.image); // Ensure valid posts
+                posts.sort(() => Math.random() - 0.5); // Shuffle posts
                 if (posts.length > 0) {
-                    const randomIndex = Math.floor(Math.random() * posts.length);
-                    const imageUrl = `https://safebooru.org/images/${posts[randomIndex].directory}/${posts[randomIndex].image}`;
+                    const imageUrl = `https://safebooru.org/images/${posts[0].directory}/${posts[0].image}`;
                     document.querySelector("img").src = imageUrl;
                 } else {
                     console.error("No valid posts found.");
@@ -100,10 +100,11 @@
             }
         }
 
+        let index = 0;
         function changeImage() {
+            index = (index + 1) % posts.length;
             if (posts.length > 0) {
-                const randomIndex = Math.floor(Math.random() * posts.length);
-                const imageUrl = `https://safebooru.org/images/${posts[randomIndex].directory}/${posts[randomIndex].image}`;
+                const imageUrl = `https://safebooru.org/images/${posts[index].directory}/${posts[index].image}`;
                 document.querySelector("img").src = imageUrl;
             } else {
                 console.error("No posts available to display.");
