--- a/index.html
+++ b/index.html
@@ -20,7 +20,10 @@
         }
         #program {
             display: flex;
-            max-width: 90%;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            width: 100%;
             height: 100%;
             border-radius: 10px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
@@ -62,6 +65,8 @@
     </form>
     <div style="display: none;" id="program">
         <img src="" alt="Girls kissing" class="animate__animated animate__fadeIn">
+        <div id="post_tags">
+        </div>
     </div>
     <script>
         // Use cors-anywhere proxy for testing (users must request access at cors-anywhere.herokuapp.com)
@@ -90,6 +95,7 @@
                 if (posts.length > 0) {
                     const imageUrl = `https://safebooru.org/images/${posts[0].directory}/${posts[0].image}`;
                     document.querySelector("img").src = imageUrl;
+                    document.getElementById("post_tags").innerText = posts[0].tags;
                 } else {
                     console.error("No valid posts found.");
                     document.querySelector("img").alt = "No images available";
@@ -106,6 +112,7 @@
             if (posts.length > 0) {
                 const imageUrl = `https://safebooru.org/images/${posts[index].directory}/${posts[index].image}`;
                 document.querySelector("img").src = imageUrl;
+                document.getElementById("post_tags").innerText = posts[index].tags;
             } else {
                 console.error("No posts available to display.");
                 document.querySelector("img").alt = "No images available";
